<resources>
    <string name="app_name">MA HR</string>
    <string name="search">搜尋</string>
    <string name="vietnam">越南</string>
    <string name="indonesia">印尼</string>
    <string name="listJobMainName">职位类型</string>
    <string name="male_employee">廠男</string>
    <string name="female_employee">廠女</string>
    <string name="house_maid">家庭類</string>
    <string name="default_type_filter">默认</string>
    <string name="properties_filter">属性过滤器</string>
    <string name="list_employee">员工名单</string>
    <string name="expertise">专门 知识</string>
    <string name="age">年齡</string>
    <string name="height">身高</string>
    <string name="weight">體重</string>
    <string name="language">语 言</string>
    <string name="experience">经 验</string>
    <string name="degree">学 位</string>
    <string name="college">大專</string>
    <string name="cnc">CNC</string>
    <string name="electronics">電子</string>
    <string name="food">食品</string>
    <string name="from">從</string>
    <string name="high_school">高中</string>
    <string name="mechanic">機械</string>
    <string name="ok">好</string>
    <string name="secondary_school">國中</string>
    <string name="taiwan">台灣</string>
    <string name="textile">紡織品</string>
    <string name="to">至</string>
    <string name="university">大學</string>
    <string name="weld">焊接</string>
    <string name="woodwork">木工</string>
    <string name="worker">工人</string>
    <string name="loading">载入中...</string>
    <string name="sending">發出...</string>

    <string name="immigration">移民</string>
    <string name="message_download_expertise_failed">下载专长失败</string>

    <string name="message_download_expertise_OK">专长列表下载</string>

    <string name="message_download_failed">下載失敗</string>
    <string name="name">姓名</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="detail">详情</string>
    <string name="primary_school">國小</string>
    <string name="vocational">中專</string>

    <string name="share">分享</string>
    <string name="confirm">確工</string>
    <string name="use">使用</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- screen 5-->
    <string name="name_woker">工人姓名</string>
    <string name="number_id">編號</string>
    <string name="factory">工廠名字</string>
    <string name="department">區域</string>
    <string name="vietnam_company">越南仲介</string>
    <string name="passport">護照</string>
    <string name="legal">良民證</string>

    <string name="health">體檢</string>
    <string name="file">收文件日</string>
    <string name="office">收文件日</string>
    <string name="visa">簽證</string>
    <string name="work_department">勞工局</string>
    <string name="flight">預計入境日</string>
    <string name="start">開始</string>
    <string name="end">結束</string>
    <string name="date_of_submit">辦件日</string>
    <string name="date_of_receiving">領件日</string>
    <string name="date_of_giving">發照日</string>
    <string name="office_start">过程</string>
    <string name="office_end">范围</string>
    <string name="finish">成就</string>
    <string name="visa_start">做</string>
    <string name="visa_end">做</string>

    <string name="status">狀態</string>
    <string name="edit_profile">编辑个人资料</string>


</resources>
