<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.TypeOneMigrationParamFragment">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <GridLayout
            android:layout_gravity="center_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:columnCount="2"
            android:rowCount="2" >

            <TextView
                android:layout_column="0"
                android:layout_row="0"
                android:text="@string/status"
                android:textSize="@dimen/dialog_text_size"
                android:layout_margin="@dimen/dialog_text_margin"
                />
            <TextView
                android:layout_column="0"
                android:layout_row="1"
                android:text="@string/start"
                android:textSize="@dimen/dialog_text_size"
                android:layout_margin="@dimen/dialog_text_margin"
                />

            <CheckBox
                android:id="@+id/chb_progress_done"
                android:layout_column="1"
                android:layout_row="0"
                android:textSize="@dimen/dialog_text_size"
                android:layout_margin="@dimen/dialog_text_margin"
                />
            <TextView
                android:id="@+id/tv_end_date"
                android:layout_column="1"
                android:layout_row="1"
                android:text="17/03/2016"
                android:textSize="@dimen/dialog_text_size"
                android:layout_margin="@dimen/dialog_text_margin"
                />
        </GridLayout>
        <Button
            android:id="@+id/btn_OK"
            android:text="@string/ok"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>


</FrameLayout>
