<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    >

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/cv" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:id="@+id/person_photo"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_marginRight="10dp" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_gravity="center" >

                <GridLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:columnCount="2"
                    android:rowCount="4"
                    >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/name"
                        android:layout_marginRight="@dimen/medium_selection_margin_within"
                        android:layout_row="0"
                        android:layout_column="0"
                        />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/age"
                        android:layout_marginRight="@dimen/medium_selection_margin_within"
                        android:layout_row="1"
                        android:layout_column="0"
                        />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/height"
                        android:layout_marginRight="@dimen/medium_selection_margin_within"
                        android:layout_row="2"
                        android:layout_column="0"
                        />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/weight"
                        android:layout_marginRight="@dimen/medium_selection_margin_within"
                        android:layout_row="3"
                        android:layout_column="0"
                        />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/person_name"
                        android:textColor="#000000"
                        android:layout_row="0"
                        android:layout_column="1"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/person_age"
                        android:text="@string/age"
                        android:textColor="#000000"
                        android:layout_row="1"
                        android:layout_column="1"
                        />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/person_height"
                        android:textColor="#000000"
                        android:layout_row="2"
                        android:layout_column="1"
                        />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/person_weight"
                        android:textColor="#000000"
                        android:layout_row="3"
                        android:layout_column="1"
                        />

                </GridLayout>

                <View
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"/>

                <ImageView
                    android:id="@+id/person_status"
                    android:scaleType="fitCenter"
                    android:layout_gravity="bottom"
                    android:layout_width="@dimen/img_status_width"
                    android:layout_height="@dimen/img_status_height" />

            </LinearLayout>

        </LinearLayout>

    </android.support.v7.widget.CardView>

</RelativeLayout>