<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginRight="40dp"
    android:layout_marginLeft="40dp"
    android:layout_gravity="fill_horizontal"
    tools:context=".fragment.MigrationParam2Fragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <GridLayout
            android:layout_gravity="center_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:columnCount="2"
            android:rowCount="3" >

            <TextView
                android:layout_column="0"
                android:layout_row="0"
                android:text="@string/status"
                android:textSize="@dimen/dialog_text_size"
                android:layout_margin="@dimen/dialog_text_margin"
                />
            <TextView
                android:layout_column="0"
                android:layout_row="1"
                android:text="@string/start"
                android:textSize="@dimen/dialog_text_size"
                android:layout_margin="@dimen/dialog_text_margin"
                />

            <TextView
                android:layout_column="0"
                android:layout_row="2"
                android:text="@string/end"
                android:textSize="@dimen/dialog_text_size"
                android:layout_margin="@dimen/dialog_text_margin"
                />
            <CheckBox
                android:id="@+id/chb_progress_done"
                android:layout_column="1"
                android:layout_row="0"
                android:textSize="@dimen/dialog_text_size"
                android:layout_margin="@dimen/dialog_text_margin"
                />
            <TextView
                android:id="@+id/tv_start_date"
                android:layout_column="1"
                android:layout_row="1"
                android:text="17/03/2016"
                android:textSize="@dimen/dialog_text_size"
                android:layout_margin="@dimen/dialog_text_margin"
                />
            <TextView
                android:id="@+id/tv_end_date"
                android:layout_column="1"
                android:layout_row="2"
                android:text=""
                android:textSize="@dimen/dialog_text_size"
                android:layout_margin="@dimen/dialog_text_margin"
                />
        </GridLayout>
        <!--<LinearLayout-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:orientation="horizontal"-->
            <!--android:padding="@dimen/dialog_padding">-->

            <!--<TextView-->
                <!--android:id="@+id/text_view"-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:text="@string/status"/>-->

            <!--<CheckBox-->
                <!--android:id="@+id/chb_status"-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="wrap_content" />-->
        <!--</LinearLayout>-->

        <!--<LinearLayout-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="match_parent"-->
            <!--android:orientation="horizontal">-->
            <!--<TextView-->
                <!--android:id="@+id/txvStartDateTitle"-->
                <!--android:text="@string/start"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:layout_width="match_parent"/>-->
            <!--<TextView-->
                <!--android:id="@+id/txvEndDateTitle"-->
                <!--android:text="@string/end"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:layout_width="match_parent"/>-->
        <!--</LinearLayout>-->

        <!--<LinearLayout-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:orientation="horizontal">-->
            <!--<TextView-->
                <!--android:id="@+id/tv_start_date"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:layout_width="match_parent"-->

                <!--/>-->
            <!--<TextView-->
                <!--android:id="@+id/tv_end_date"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:layout_width="match_parent"-->

                <!--/>-->
        <!--</LinearLayout>-->



        <!--<GridLayout-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:columnCount="2"-->
            <!--android:rowCount="2">-->
            <!--&lt;!&ndash;<TextView&ndash;&gt;-->
                <!--&lt;!&ndash;android:id="@+id/txvStartDateTitle"&ndash;&gt;-->
                <!--&lt;!&ndash;android:text="@string/start"&ndash;&gt;-->
                <!--&lt;!&ndash;android:layout_column="0"&ndash;&gt;-->
                <!--&lt;!&ndash;android:layout_row="0" />&ndash;&gt;-->
            <!--&lt;!&ndash;<TextView&ndash;&gt;-->
                <!--&lt;!&ndash;android:id="@+id/txvEndDateTitle"&ndash;&gt;-->
                <!--&lt;!&ndash;android:text="@string/end"&ndash;&gt;-->
                <!--&lt;!&ndash;android:layout_column="0"&ndash;&gt;-->
                <!--&lt;!&ndash;android:layout_row="1" />&ndash;&gt;-->
            <!--&lt;!&ndash;<TextView&ndash;&gt;-->
                <!--&lt;!&ndash;android:id="@+id/tv_start_date"&ndash;&gt;-->
                <!--&lt;!&ndash;android:layout_column="1"&ndash;&gt;-->
                <!--&lt;!&ndash;android:layout_row="0"&ndash;&gt;-->
                <!--&lt;!&ndash;/>&ndash;&gt;-->
            <!--&lt;!&ndash;<TextView&ndash;&gt;-->
                <!--&lt;!&ndash;android:id="@+id/tv_end_date"&ndash;&gt;-->
                <!--&lt;!&ndash;android:layout_column="1"&ndash;&gt;-->
                <!--&lt;!&ndash;android:layout_row="1"&ndash;&gt;-->
                <!--&lt;!&ndash;/>&ndash;&gt;-->
        <!--</GridLayout>-->

        <Button
            android:minWidth="350dp"
            android:id="@+id/btn_OK"
            android:text="@string/ok"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

</FrameLayout>
